<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.izv.angel.inmobiliaria.Agregar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/agregarInm"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:paddingBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView2"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLocalidad"
            android:layout_weight="0"
            android:hint="@string/localidad"
            android:padding="12dp"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDireccion"
            android:layout_weight="0"
            android:hint="@string/direccion"
            android:padding="12dp"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTipo"
            android:layout_weight="0"
            android:hint="@string/tipo"
            android:padding="12dp"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etPrecio"
            android:layout_weight="0"
            android:hint="@string/precio"
            android:padding="12dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregarInm"
            android:id="@+id/btAgregar"
            android:layout_gravity="center"
            android:onClick="aniadir" />
    </LinearLayout>
</RelativeLayout>
